--- a/src/index.css
+++ b/src/index.css
@@ -4,12 +4,23 @@ body {
   width: 100%;
   height: 100%;
 }
-#map {
-  width: 100vw!important;
-  height: 100vh!important;
+
+
+.mapboxgl-map{
+ width: 90vw;
+ height: 90vh;
 }
 
-.leaflet-container {
- width: 100vw;
- height: 100vh;
+
+.mapMarkerStyle {
+  background-color: green;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: block;
+
+  top: -0.5rem;
+  position: relative;
+  border-radius: 1.2rem 1.5rem 0;
+  transform: rotate(45deg);
+  border: 1px solid #FFFFFF;
 }
