--- a/src/index.css
+++ b/src/index.css
@@ -4,11 +4,15 @@ body {
   width: 100%;
   height: 100%;
 }
+div {
+  padding: 0;
+  margin: 0;
+}
 
 
 .mapboxgl-map{
  width: 100vw;
- height: 600px;
+ height: 400px;
 }
 
 
@@ -29,7 +33,7 @@ body {
   background-color: #640D14;
   padding: 10px 0;
 }
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Unica One', cursive;
   color: white;
   text-align: center;
@@ -91,10 +95,6 @@ select {
   width: 100px;
   transition: ease 0.3s;
 }
-
-option {
-  background-color: blue;
-}
 select {
   width: 200px;
 }
@@ -103,4 +103,12 @@ select {
 .filter-button:hover {
   cursor: pointer;
   background-color: #b35c5e;
+}
+
+.results {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #800E13;
 }
