--- a/src/index.css
+++ b/src/index.css
@@ -33,14 +33,18 @@ div {
   background-color: #640D14;
   padding: 10px 0;
 }
-h1, h2, h3 {
+h1, h2, h3, p {
   font-family: 'Unica One', cursive;
   color: white;
   text-align: center;
   padding: 0;
   margin: 0;
-
 }
+
+p {
+  font-family:'Roboto Condensed', sans-serif;
+ }
+
 h1 {
     letter-spacing: 2px;
   font-weight: bold;
@@ -73,7 +77,7 @@ h2 {
   width: 100%;
   margin-left: 0px;
   font-size: 18px;
-  font-family:'Source Sans Pro', sans-serif;
+  font-family:'Roboto Condensed', sans-serif;
   text-indent: 30px;
   padding: 5px 0;
   height: 25px;
@@ -81,7 +85,7 @@ h2 {
   background-size: 25px 25px;
 }
 .search-button,
-select {
+select, button{
 
   font: bold 18px 'Unica One', cursive;
   border: 1px solid white;
@@ -100,7 +104,8 @@ select {
 }
 
 .search-button:hover,
-.filter-button:hover {
+.filter-button:hover,
+button:hover {
   cursor: pointer;
   background-color: #b35c5e;
 }
@@ -111,4 +116,32 @@ select {
   width: 100%;
   height: 100%;
   background-color: #800E13;
+}
+
+.result-grid {
+  padding: 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  grid-row-gap: 30px;
+  margin: 0 auto;
+}
+
+.bus-image-container {
+  margin: 0 auto;
+}
+li {
+  list-style: none;
+}
+.business-info {
+  padding: 20px 0;
+}
+.more-info {
+  margin: 0;
+  padding: 5px;
+}
+
+.button-container {
+  text-align: center;
+  padding-top: 10px;
 }
