--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,62 @@
-.App {
-  text-align: center;
+/*
+P R I M A R Y
+E L E M E N T S
+*/
+body {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+div {
+  padding: 0;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
+h1, h2, h3, h4, p {
+  font-family: 'Unica One', cursive;
   color: white;
+  text-align: center;
+  padding: 0;
+  margin: 0;
 }
 
-.App-title {
-  font-size: 1.5em;
+p {
+  font-family: 'Roboto Condensed', sans-serif;
+  overflow-wrap: break-word;
 }
 
-.App-intro {
-  font-size: large;
+h1 {
+  letter-spacing: 2px;
+  font-weight: bold;
+  font-size: 40px;
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+h2 {
+  font-size: 20px;
+  padding: 0;
+  color: #dea9ac
+}
+
+h3 {
+  font-size: 32px;
+  color: #dea9ac;
+}
+
+h4 {
+  font-weight: bold;
+  font-size: 18px;
+  text-transform: uppercase;
+  font-family: 'Roboto Condensed', sans-serif;
+  padding-bottom: 5px;
+}
+
+/*
+M A I N
+H E A D I N G
+*/
+.main-header {
+  background-color: #35363B;
+  padding: 10px 0;
 }
