--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,352 @@ H E A D I N G
   background-color: #35363B;
   padding: 10px 0;
 }
+
+/*
+M A P
+*/
+.mapMarkerStyle {
+  background-color: green;
+  width: 1.5rem;
+  height: 1.5rem;
+  display: block;
+  top: -0.5rem;
+  position: relative;
+  border-radius: 1.2rem 1.5rem 0;
+  transform: rotate(45deg);
+  border: 1px solid #FFFFFF;
+}
+
+/*
+B U T T O N S
+*/
+.search-button,
+select, button, .more-info, .yelp-button {
+  text-decoration: none;
+  font: bold 18px 'Unica One', cursive;
+  border: 1px solid white;
+  border-radius: 2px;
+  margin-left: 10px;
+  padding: 0px 10px;
+  height: 100%;
+  text-transform: uppercase;
+  color: white;
+  background-color: #AD2831;
+  width: 100px;
+  transition: ease 0.3s;
+}
+
+.search-button:hover,
+.filter-button:hover,
+button:hover, .more-info:hover, .yelp-button:hover {
+  cursor: pointer;
+  background-color: #b35c5e;
+}
+
+.more-info, .yelp-button {
+  border-radius: 5px;
+  padding: 5px 20px !important;
+}
+
+.button-container {
+  padding-top: 10px;
+    text-align: center;
+      margin-top: 10px;
+}
+
+.business-info {
+  padding: 5px 0;
+}
+
+.more-info {
+  margin: 0;
+  padding: 5px;
+}
+
+.invalid-input, .invalid-input-button {
+margin-top: 20px;
+}
+
+/*
+S E A R C H
+B A R
+*/
+.search-container {
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  background-color: #252529;
+  width: 100%;
+  padding: 15px 0;
+  justify-content: center;
+}
+
+.search-wrapper {
+  width: 40%;
+}
+
+.filter-wrapper {
+  width: 10%;
+}
+
+@media screen and (max-width: 600px) {
+  .search-wrapper {
+    width: 90%;
+    margin-bottom: 10px;
+  }
+
+  .filter-wrapper {
+    width: 90%;
+  }
+}
+
+.search-container input {
+  width: 100%;
+  margin-left: 0px;
+  font-size: 18px;
+  font-family: 'Roboto Condensed', sans-serif;
+  text-indent: 30px;
+  padding: 5px 0;
+  height: 25px;
+  background: white url('icons/search-icon.png') left no-repeat;
+  background-size: 25px 25px;
+}
+select {
+  width: 200px;
+}
+
+/*
+R E S U L T
+S E C T I O N
+*/
+.results {
+  padding: 30px 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #252529;
+}
+
+.result-grid {
+  padding: 10px 0;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  justify-content: center;
+  grid-row-gap: 30px;
+  grid-column-gap: 30px;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 1016px) {
+  .result-grid {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .result-grid {
+    grid-template-columns: 1fr 1fr;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .result-grid {
+    grid-template-columns: 1fr;
+  }
+}
+
+
+/*
+S P E C I F I C
+R E S U L T
+*/
+.bus-image-container {
+  margin: 0 auto;
+}
+
+li {
+  padding: 20px 0;
+  border-radius: 10px;
+  list-style: none;
+  background-color: rgba(255, 255, 255, 0.1)
+}
+
+/*
+O P T
+T O
+A D O P T
+*/
+.rand-horse-wrapper {
+  background-color: #3B3B3F;
+}
+
+.rand-horse-container {
+  width: 75%;
+  height: 100%;
+  padding: 50px;
+  justify-content: center;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  /* grid-template-rows: repeat(5, 1fr); */
+  grid-column-gap: 50px;
+  grid-row-gap: 30px;
+  grid-template-areas:
+    '. heading heading heading .'
+    'hfimage hfimage . ghInfo .'
+    'hfimage hfimage description description description'
+    'hfimage hfimage .  contact .';
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+@media screen and (max-width: 932px) {
+  .rand-horse-container {
+    width: 75%;
+    height: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 10px;
+    grid-template-areas:
+      'heading heading heading'
+      'hfimage hfimage hfimage'
+      'ghInfo ghInfo ghInfo'
+      'description description description'
+      'contact contact contact';
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .horse-finder-image-container {
+    margin: 0 auto;
+    text-align: center;
+    width: 200px;
+    height: auto;
+  }
+}
+
+.adopt-heading {
+  grid-area: heading;
+}
+
+.horse-finder-image-container {
+  width: 80%;
+  grid-area: hfimage;
+}
+
+.horse-finder-image-container img {
+  width: 100%;
+  height: auto;
+}
+
+.general-horse-info {
+  grid-area: ghInfo;
+}
+
+.description-container {
+  grid-area: description;
+}
+
+.description-container p {
+  text-align: justify;
+}
+
+.contact-container {
+  grid-area: contact;
+}
+
+/*
+F E A T U R E D
+R E S U L T
+*/
+.result-featured {
+  background-color: #3B3B3F;
+  padding: 20px 0;
+}
+
+.result-featured-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  align-content: center;
+  width: 50%;
+  margin: 0 auto;
+}
+
+.result-featured-text {
+  text-align: center;
+}
+
+.result-featured-text,
+.result-featured-image {
+  width: 50%;
+}
+
+
+/*
+G O
+B A C K
+B U T T O N
+*/
+
+.go-back::before {
+  top: 18px;
+  left: 18px;
+  color: white;
+  content: "<";
+  font: 42px'Unica One', cursive;
+  position: absolute;
+  z-index: 1000;
+  width: 50px;
+  height: 50px;
+  border: 2px solid white;
+  border-radius: 50px;
+  text-align: center;
+}
+
+
+/*
+M O D A L
+*/
+
+.location-modal {
+  display: flex;
+  flex-wrap: wrap;
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.9);
+  z-index: 3000;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  top:0;
+}
+.location-modal-content {
+  text-align: center;
+  background-color: rgba(53,54,59, 0.9);
+  margin: auto;
+  padding: 10px;
+  border-radius: 10px;
+  width: 50%;
+}
+
+/*
+M I S C
+*/
+.shrink-image {
+  width: 90%;
+  height: auto;
+}
+
+/*
+F O O T E R
+*/
+.footer {
+  background-color: #252529;
+  padding: 10px 0;
+}
+
+.footer-link {
+  color: #bdbdbe;
+}
